src/lowering/snapshots/rusty__lowering__calls__tests__function_wirh_array_of_string_return-3.snap
---
source: src/lowering/calls.rs
expression: unit
---
CompilationUnit {
    global_vars: [],
    var_config: [],
    pous: [
        POU {
            name: "foo",
            variable_blocks: [
                VariableBlock {
                    variables: [
                        Variable {
                            name: "foo",
                            data_type: DataTypeReference {
                                referenced_type: "__foo_return",
                            },
                        },
                    ],
                    variable_block_type: InOut,
                },
            ],
            pou_type: Function,
            return_type: Some(
                Aggregate {
                    referenced_type: "__foo_return",
                },
            ),
            interfaces: [],
            properties: [],
        },
        POU {
            name: "main",
            variable_blocks: [],
            pou_type: Function,
            return_type: None,
            interfaces: [],
            properties: [],
        },
    ],
    implementations: [
        Implementation {
            name: "foo",
            type_name: "foo",
            linkage: Internal,
            pou_type: Function,
            statements: [
                Assignment {
                    left: ReferenceExpr {
                        kind: Index(
                            LiteralInteger {
                                value: 0,
                            },
                        ),
                        base: Some(
                            ReferenceExpr {
                                kind: Member(
                                    Identifier {
                                        name: "foo",
                                    },
                                ),
                                base: None,
                            },
                        ),
                    },
                    right: LiteralString {
                        value: "hello",
                        is_wide: false,
                    },
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Index(
                            LiteralInteger {
                                value: 1,
                            },
                        ),
                        base: Some(
                            ReferenceExpr {
                                kind: Member(
                                    Identifier {
                                        name: "foo",
                                    },
                                ),
                                base: None,
                            },
                        ),
                    },
                    right: LiteralString {
                        value: "world",
                        is_wide: false,
                    },
                },
            ],
            location: SourceLocation {
                span: Range(2:12 - 3:30),
                file: Some(
                    "<internal>",
                ),
            },
            name_location: SourceLocation {
                span: Range(1:17 - 1:20),
                file: Some(
                    "<internal>",
                ),
            },
            end_location: SourceLocation {
                span: Range(4:8 - 4:20),
                file: Some(
                    "<internal>",
                ),
            },
            overriding: false,
            generic: false,
            access: None,
        },
        Implementation {
            name: "main",
            type_name: "main",
            linkage: Internal,
            pou_type: Function,
            statements: [
                ExpressionList {
                    expressions: [
                        Allocation {
                            name: "__foo0",
                            reference_type: "__foo_return",
                        },
                        CallStatement {
                            operator: ReferenceExpr {
                                kind: Member(
                                    Identifier {
                                        name: "foo",
                                    },
                                ),
                                base: None,
                            },
                            parameters: Some(
                                ExpressionList {
                                    expressions: [
                                        ReferenceExpr {
                                            kind: Member(
                                                Identifier {
                                                    name: "__foo0",
                                                },
                                            ),
                                            base: None,
                                        },
                                    ],
                                },
                            ),
                        },
                        ReferenceExpr {
                            kind: Member(
                                Identifier {
                                    name: "__foo0",
                                },
                            ),
                            base: None,
                        },
                    ],
                },
            ],
            location: SourceLocation {
                span: Range(7:12 - 7:18),
                file: Some(
                    "<internal>",
                ),
            },
            name_location: SourceLocation {
                span: Range(6:17 - 6:21),
                file: Some(
                    "<internal>",
                ),
            },
            end_location: SourceLocation {
                span: Range(8:8 - 8:20),
                file: Some(
                    "<internal>",
                ),
            },
            overriding: false,
            generic: false,
            access: None,
        },
    ],
    interfaces: [],
    user_types: [
        UserTypeDeclaration {
            data_type: ArrayType {
                name: Some(
                    "__foo_return",
                ),
                bounds: RangeStatement {
                    start: LiteralInteger {
                        value: 0,
                    },
                    end: LiteralInteger {
                        value: 1,
                    },
                },
                referenced_type: DataTypeReference {
                    referenced_type: "STRING",
                },
                is_variable_length: false,
            },
            initializer: None,
            scope: Some(
                "foo",
            ),
        },
    ],
    file: File(
        "<internal>",
    ),
    linkage: Internal,
    namespace: None,
}
