src/lowering/snapshots/rusty__lowering__calls__tests__function_with_explicit_call_statement_has_explicit_return-2.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[1]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        ExpressionList {
            expressions: [
                Allocation {
                    name: "__foo0",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "foo",
                            },
                        ),
                        base: None,
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "foo",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "__foo0",
                                            },
                                        ),
                                        base: None,
                                    },
                                },
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "x",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: LiteralInteger {
                                        value: 1,
                                    },
                                },
                            ],
                        },
                    ),
                },
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "__foo0",
                        },
                    ),
                    base: None,
                },
            ],
        },
    ],
    location: SourceLocation {
        span: Range(9:12 - 9:24),
        file: Some(
            "<internal>",
        ),
    },
    name_location: SourceLocation {
        span: Range(8:17 - 8:21),
        file: Some(
            "<internal>",
        ),
    },
    end_location: SourceLocation {
        span: Range(10:8 - 10:20),
        file: Some(
            "<internal>",
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
