src/lowering/snapshots/rusty__lowering__calls__tests__method_with_string_return_is_changed.snap
---
source: src/lowering/calls.rs
expression: "unit.units[1]"
snapshot_kind: text
---
POU {
    name: "fb.complexMethod",
    variable_blocks: [
        VariableBlock {
            variables: [
                Variable {
                    name: "complexMethod",
                    data_type: DataTypeReference {
                        referenced_type: "STRING",
                    },
                },
            ],
            variable_block_type: InOut,
        },
    ],
    pou_type: Method {
        parent: "fb",
        property: None,
        kind: Concrete,
    },
    return_type: Some(
        Aggregate {
            referenced_type: "STRING",
        },
    ),
    interfaces: [],
}
