src/lowering/snapshots/rusty__lowering__calls__tests__nested_complex_calls_in_if_condition.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[0]"
---
Implementation {
    name: "CLEAN",
    type_name: "CLEAN",
    linkage: Internal,
    pou_type: Function,
    statements: [
        ExpressionList {
            expressions: [
                Allocation {
                    name: "__MID__STRING0",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "MID__STRING",
                            },
                        ),
                        base: None,
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                ReferenceExpr {
                                    kind: Member(
                                        Identifier {
                                            name: "__MID__STRING0",
                                        },
                                    ),
                                    base: None,
                                },
                                ReferenceExpr {
                                    kind: Member(
                                        Identifier {
                                            name: "CLEAN",
                                        },
                                    ),
                                    base: None,
                                },
                                LiteralInteger {
                                    value: 1,
                                },
                                ReferenceExpr {
                                    kind: Member(
                                        Identifier {
                                            name: "pos",
                                        },
                                    ),
                                    base: None,
                                },
                            ],
                        },
                    ),
                },
                IfStatement {
                    blocks: [
                        ConditionalBlock {
                            condition: BinaryExpression {
                                operator: Greater,
                                left: CallStatement {
                                    operator: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "FIND__STRING",
                                            },
                                        ),
                                        base: None,
                                    },
                                    parameters: Some(
                                        ExpressionList {
                                            expressions: [
                                                ReferenceExpr {
                                                    kind: Member(
                                                        Identifier {
                                                            name: "CX",
                                                        },
                                                    ),
                                                    base: None,
                                                },
                                                ReferenceExpr {
                                                    kind: Member(
                                                        Identifier {
                                                            name: "__MID__STRING0",
                                                        },
                                                    ),
                                                    base: None,
                                                },
                                            ],
                                        },
                                    ),
                                },
                                right: LiteralInteger {
                                    value: 0,
                                },
                            },
                            body: [
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "pos",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: BinaryExpression {
                                        operator: Plus,
                                        left: ReferenceExpr {
                                            kind: Member(
                                                Identifier {
                                                    name: "pos",
                                                },
                                            ),
                                            base: None,
                                        },
                                        right: LiteralInteger {
                                            value: 1,
                                        },
                                    },
                                },
                            ],
                        },
                    ],
                    else_block: [],
                },
            ],
        },
        EmptyStatement,
    ],
    location: SourceLocation {
        span: Range(8:16 - 10:23),
        file: Some(
            "<internal>",
        ),
    },
    name_location: SourceLocation {
        span: Range(1:21 - 1:26),
        file: Some(
            "<internal>",
        ),
    },
    end_location: SourceLocation {
        span: Range(11:12 - 11:24),
        file: Some(
            "<internal>",
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
